# itfplayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/itf/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/itf/player/: CAO.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/itf/player/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
itfmedia/: build.gradle
itfmedia/src/main/: AndroidManifest.xml
itfmedia/src/main/cpp/: CMakeLists.txt
itfmedia/src/main/cpp/android/: native_itf.cpp
itfmedia/src/main/cpp/android_ffmpeg/render/: FFDecoder.cpp  FFDecoder.h  FFDecoderCore.cpp  FFDecoderCore.h  FFVDecode.cpp  FFVDecode.h
itfmedia/src/main/cpp/android_opengles/egl/: EGLObject.cpp
itfmedia/src/main/cpp/android_opengles/render_egl/: EGLObject.cpp  EGLObject.h
itfmedia/src/main/cpp/itf_codec/: ItfDecoder.cpp  ItfDecoder.h
itfmedia/src/main/cpp/itf_ffmpeg/render/: FFDecoder.cpp  FFDecoder.h  FFDecoderCore.cpp  FFDecoderCore.h
itfmedia/src/main/cpp/itf_opengles/egl/: EGLObject.h
itfmedia/src/main/cpp/itfcodec/: ItfAndroidCodec.cpp  ItfAndroidCodec.h  ItfDecoder.cpp  ItfDecoder.h
itfmedia/src/main/cpp/itfcodec/decode/: ItfVDecoder.cpp  ItfVDecoder.h
itfmedia/src/main/cpp/itfcodec/encode/: AndroidVDecode.cpp  AndroidVDecode.h  BaseVDecode.cpp  BaseVDecode.h
itfmedia/src/main/cpp/utils/: LOGANDROID.h  LOGIOS.h  LogAndroid.h  header_common.h  header_ffmpeg.h  header_opengl.h
itfmedia/src/main/java/tv/itf/media/: NativeItfMedia.kt
itfmedia/src/test/java/tv/itf/media/: ExampleUnitTest.kt
